fixed overflow bug and made content scrollable

--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -10,9 +10,8 @@
 html, body {
   height: 100%;
   margin: 0;
-  overflow: hidden;
 }
 
-// * {
-//   border: 1px solid;
-// }
+* {
+  border: 1px solid;
+}
